--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-  <head></head> 
+  <title>E-commerce</title>
+  <link href="css./style.css" media="all" rel="stylesheet" type="text/css" />
+<head>  
+</head> 
 <body>
-  lkjlkj
+   
+  
 </body>
 </html>        
