--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head> 
+  <head>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head> 
 <body>
   lkjlkj
 </body>
